[package]
name = "axum_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenv = "0.15.0"
hyper = "1.4.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
surrealdb = "1.5.3"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["tracing", "full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde"] }
