[package]
name = "axum_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
hyper = "1.4.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
surrealdb = "1.5.3"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["tracing", "full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde"] }
